--- a/soluzioni.tex
+++ b/soluzioni.tex
@@ -2,11 +2,19 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
 \usepackage[italian]{babel}
+\usepackage{enumerate}
 \begin{document}
 	\title{Soluzioni esercizi gruppi}
 	\maketitle
 	
 	\section{Gruppi: assiomi proprietà generali}
+	\subsection{Assiomi}
+	\begin{enumerate}[(a)]
+	\item[(c)] supponiamo che esistano unità destra $e_s$ e sinistra $e_d$
+	allora si può dire $e_s = e_se_d = e_d$
+	\item[(d)]	come sopra se esistono inverso sinistro $a_s^{-1}$ e destro $a_d^{-1}$
+	allora si può dire $a_s^{-1} = a_s^{-1} a a_d^{-1} = a_d^{-1}$
+	\end{enumerate}
 	
 	\section{ Gruppi di Lie e Algebre di Lie}
 	
